Mejoras en la trazabilidad del modo debug.